logs/20250620_145821.log
Hello,DirectX!

WSTRING1280

Use Adapter:NVIDIA GeForce RTX 4060 Laptop GPU

FeatureLevel : 12.2

complete create D3D12Device!!!

Begin CompileShader, path:Object3D.VS.hlsl, profile:vs_6_0

Object3D.VS.hlsl:18:8: error: redefinition of 'VertexShaderOutput'
struct VertexShaderOutput
       ^
./object3d.hlsli:1:8: note: previous definition is here
struct VertexShaderOutput
       ^

